# pre-post

./: .env.example  .gitignore  Project Management Infographics by Slidesgo.pptx  README.md  golde-llm-rules.md  golden-final.md  golden.md  main-rule.mdc  new_setup.mdc  project_structure.txt  prompt.md  pyproject.toml  rules.mdc  task_conversion.mdc  test.md  user_rules.md  wireframe-rules.mdc
docs/: f5_prepost_check_api.md
f5_prepost_api/: __init__.py  config.py  database.py  main.py
f5_prepost_api/api/: __init__.py
f5_prepost_api/api/v1/: __init__.py
f5_prepost_api/api/v1/endpoints/: __init__.py  checks.py  diff.py  outputs.py  postcheck.py  precheck.py  search.py  status.py
f5_prepost_api/core/: __init__.py  device_handler.py  device_manager.py  logging_config.py
f5_prepost_api/models/: __init__.py  schemas.py
f5_prepost_api/utils/: __init__.py  command_validator.py  diff_utils.py
tests/: __init__.py
